--- a/.tokeignore
+++ b/.tokeignore
@@ -3,9 +3,10 @@ LICENSE
 README.md
 CODE_OF_CONDUCT.md
 renovate.json
-requirements.txt
 scraper.py
 urls-ABP.txt
 urls-UBO.txt
 urls-UBL.txt
 urls-pihole.txt
+pyproject.toml
+uv.lock
